# BFTML

./: .gitmodules  Cargo.toml  README.md  file.xml
docs/: bftml-presentation.html  bftml-speaker-outline.md  intuitions.md  motivations.md  notes.md  principles.md
src/: DOM.rs  app.rs  graphics.rs  main.rs  mesh.rs
src/elements/: button.rs  column.rs  mod.rs  parser.rs  rect.rs
src/graphics/: bindings.rs  geometry.rs  gpu.rs  mod.rs  uniforms.rs
src/parser/: attributes.rs  mod.rs  tags.rs  traits.rs  values.rs
src/procedural/: canvas.rs  circle.rs  frame.rs  mod.rs  rect.rs  rrect.rs
src/shaders/: circle.wgsl  rect.wgsl  rectangle.wgsl  rrect.wgsl
