[package]
name = "BFTML"
version = "0.1.0"
edition = "2021"

[dependencies]
# bytemuck = { version = "1.23.2", features = [ "derive" ] }
glyphon = "0.10.0"
indexmap = "2.13.0"
pollster = "0.4.0"
wgpu = "28.0.0"
wgpu_macros = { version = "0.1.0", path = "wgpu-macros" }
winnow = "0.7.14"
winit = { version = "0.30.12", features = ["rwh_05"] }
zerocopy = { version = "0.8.33", features = [ "derive" ]}
